boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_direct_vector_closure_parameters_from_contract_group.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/direct_vector_closure_parameter\")"
---
===== jni/demo.h =====
<c abi support declarations>
FfiStatus boltffi_function_demo_install(uint32_t (*callback_call)(void *, const uint32_t *, uintptr_t), void *callback_context, void (*callback_release)(void *));

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
<jni status helper>
static uint32_t boltffi_jni____closure__vec_u32_to_u32_call(void *user_data, const uint32_t *arg0_ptr, uintptr_t arg0_len);
static void boltffi_jni____closure__vec_u32_to_u32_release(void *user_data);

static jclass g____closure__vec_u32_to_u32_class = NULL;
static jmethodID g____closure__vec_u32_to_u32_call_method = NULL;
static jmethodID g____closure__vec_u32_to_u32_free_method = NULL;
static uint32_t boltffi_jni____closure__vec_u32_to_u32_call(void *user_data, const uint32_t *arg0_ptr, uintptr_t arg0_len) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    jintArray arg0 = NULL;

    if (arg0_len > (uintptr_t)INT32_MAX) {
        boltffi_jni_throw_runtime(env, "BoltFFI vector argument too large for Java array");
        goto __boltffi_fail;
    }
    arg0 = (*env)->NewIntArray(env, (jsize)arg0_len);
    if (arg0 == NULL) {
        goto __boltffi_fail;
    }
    (*env)->SetIntArrayRegion(env, arg0, 0, (jsize)arg0_len, (const jint *)arg0_ptr);
    if ((*env)->ExceptionCheck(env)) {
        goto __boltffi_fail;
    }

    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____closure__vec_u32_to_u32_class, g____closure__vec_u32_to_u32_call_method, handle, arg0);
    if ((*env)->ExceptionCheck(env)) {
        goto __boltffi_fail;
    }

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:;

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

        return 0;
}

static void boltffi_jni____closure__vec_u32_to_u32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__vec_u32_to_u32_class, g____closure__vec_u32_to_u32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__vec_u32_to_u32(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ClosureVecU32ToU32Callbacks", "com/boltffi/demo/ClosureVecU32ToU32Callbacks", &g____closure__vec_u32_to_u32_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__vec_u32_to_u32_class, "com/boltffi/demo/ClosureVecU32ToU32Callbacks", "call", "call", "(J[I)I", "(J[I)I", &g____closure__vec_u32_to_u32_call_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__vec_u32_to_u32_class, "com/boltffi/demo/ClosureVecU32ToU32Callbacks", "free", "free", "(J)V", "(J)V", &g____closure__vec_u32_to_u32_free_method)) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__vec_u32_to_u32_class);
    g____closure__vec_u32_to_u32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__vec_u32_to_u32(JNIEnv *env) {
    if (g____closure__vec_u32_to_u32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__vec_u32_to_u32_class);
    }
    g____closure__vec_u32_to_u32_class = NULL;
    g____closure__vec_u32_to_u32_call_method = NULL;
    g____closure__vec_u32_to_u32_free_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__vec_u32_to_u32(env)) {
        boltffi_jni_unload____closure__vec_u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____closure__vec_u32_to_u32(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1install(JNIEnv *env, jclass cls, jlong callback) {
    (void)cls;

    FfiStatus __boltffi_status = boltffi_function_demo_install(boltffi_jni____closure__vec_u32_to_u32_call, (void *)callback, boltffi_jni____closure__vec_u32_to_u32_release);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    return;
}
