boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_encoded_closure_return_shapes_as_byte_arrays.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/encoded_closure_return_shapes\")"
---
===== jni/demo.h =====
<c abi support declarations>
FfiStatus boltffi_function_demo_install_vec(FfiBuf_u8 (*callback_call)(void *), void *callback_context, void (*callback_release)(void *));
FfiStatus boltffi_function_demo_install_option(FfiBuf_u8 (*callback_call)(void *), void *callback_context, void (*callback_release)(void *));

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
<jni status helper>
<jni byte-array helpers>
static FfiBuf_u8 boltffi_jni____closure__to_opt_i32_call(void *user_data);
static void boltffi_jni____closure__to_opt_i32_release(void *user_data);
static FfiBuf_u8 boltffi_jni____closure__to_vec_u32_call(void *user_data);
static void boltffi_jni____closure__to_vec_u32_release(void *user_data);

static jclass g____closure__to_opt_i32_class = NULL;
static jmethodID g____closure__to_opt_i32_call_method = NULL;
static jmethodID g____closure__to_opt_i32_free_method = NULL;
static FfiBuf_u8 boltffi_jni____closure__to_opt_i32_call(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return (FfiBuf_u8){0};
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    jbyteArray __boltffi_return_array = (jbyteArray)(*env)->CallStaticObjectMethod(env, g____closure__to_opt_i32_class, g____closure__to_opt_i32_call_method, handle);
    if ((*env)->ExceptionCheck(env)) {
        goto __boltffi_fail;
    }
    FfiBuf_u8 result = boltffi_jni_byte_array_to_buffer(env, __boltffi_return_array);
    (*env)->DeleteLocalRef(env, __boltffi_return_array);
    if ((*env)->ExceptionCheck(env)) {
        boltffi_free_buf(result);
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:;

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

        return (FfiBuf_u8){0};
}

static void boltffi_jni____closure__to_opt_i32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__to_opt_i32_class, g____closure__to_opt_i32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__to_opt_i32(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ClosureToOptI32Callbacks", "com/boltffi/demo/ClosureToOptI32Callbacks", &g____closure__to_opt_i32_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__to_opt_i32_class, "com/boltffi/demo/ClosureToOptI32Callbacks", "call", "call", "(J)[B", "(J)[B", &g____closure__to_opt_i32_call_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__to_opt_i32_class, "com/boltffi/demo/ClosureToOptI32Callbacks", "free", "free", "(J)V", "(J)V", &g____closure__to_opt_i32_free_method)) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__to_opt_i32_class);
    g____closure__to_opt_i32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__to_opt_i32(JNIEnv *env) {
    if (g____closure__to_opt_i32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__to_opt_i32_class);
    }
    g____closure__to_opt_i32_class = NULL;
    g____closure__to_opt_i32_call_method = NULL;
    g____closure__to_opt_i32_free_method = NULL;
}

static jclass g____closure__to_vec_u32_class = NULL;
static jmethodID g____closure__to_vec_u32_call_method = NULL;
static jmethodID g____closure__to_vec_u32_free_method = NULL;
static FfiBuf_u8 boltffi_jni____closure__to_vec_u32_call(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return (FfiBuf_u8){0};
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    jbyteArray __boltffi_return_array = (jbyteArray)(*env)->CallStaticObjectMethod(env, g____closure__to_vec_u32_class, g____closure__to_vec_u32_call_method, handle);
    if ((*env)->ExceptionCheck(env)) {
        goto __boltffi_fail;
    }
    FfiBuf_u8 result = boltffi_jni_byte_array_to_buffer(env, __boltffi_return_array);
    (*env)->DeleteLocalRef(env, __boltffi_return_array);
    if ((*env)->ExceptionCheck(env)) {
        boltffi_free_buf(result);
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:;

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

        return (FfiBuf_u8){0};
}

static void boltffi_jni____closure__to_vec_u32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__to_vec_u32_class, g____closure__to_vec_u32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__to_vec_u32(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ClosureToVecU32Callbacks", "com/boltffi/demo/ClosureToVecU32Callbacks", &g____closure__to_vec_u32_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__to_vec_u32_class, "com/boltffi/demo/ClosureToVecU32Callbacks", "call", "call", "(J)[B", "(J)[B", &g____closure__to_vec_u32_call_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____closure__to_vec_u32_class, "com/boltffi/demo/ClosureToVecU32Callbacks", "free", "free", "(J)V", "(J)V", &g____closure__to_vec_u32_free_method)) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__to_vec_u32_class);
    g____closure__to_vec_u32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__to_vec_u32(JNIEnv *env) {
    if (g____closure__to_vec_u32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__to_vec_u32_class);
    }
    g____closure__to_vec_u32_class = NULL;
    g____closure__to_vec_u32_call_method = NULL;
    g____closure__to_vec_u32_free_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__to_opt_i32(env)) {
        boltffi_jni_unload____closure__to_opt_i32(env);
        boltffi_jni_unload____closure__to_vec_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__to_vec_u32(env)) {
        boltffi_jni_unload____closure__to_opt_i32(env);
        boltffi_jni_unload____closure__to_vec_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____closure__to_opt_i32(env);
        boltffi_jni_unload____closure__to_vec_u32(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1install_1vec(JNIEnv *env, jclass cls, jlong callback) {
    (void)cls;

    FfiStatus __boltffi_status = boltffi_function_demo_install_vec(boltffi_jni____closure__to_vec_u32_call, (void *)callback, boltffi_jni____closure__to_vec_u32_release);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    return;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1install_1option(JNIEnv *env, jclass cls, jlong callback) {
    (void)cls;

    FfiStatus __boltffi_status = boltffi_function_demo_install_option(boltffi_jni____closure__to_opt_i32_call, (void *)callback, boltffi_jni____closure__to_opt_i32_release);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    return;
}
