boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_encoded_functions_as_byte_arrays.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_source(SourceFixture::many([\"records/person\", \"enums/shape\",\n\"enums/message\", \"exports/encoded_functions\",]))"
---
===== jni/demo.h =====
<c abi support declarations>
typedef uint32_t ___Shape;
#define SHAPE_LABEL ((___Shape)0)
typedef uint32_t ___Message;
#define MESSAGE_EMPTY ((___Message)0)
#define MESSAGE_TEXT ((___Message)1)
#define MESSAGE_NAMED ((___Message)2)
FfiBuf_u8 boltffi_function_demo_echo_bytes(const uint8_t *bytes_ptr, uintptr_t bytes_len);
FfiBuf_u8 boltffi_function_demo_keep_person(const uint8_t *person_ptr, uintptr_t person_len);
FfiBuf_u8 boltffi_function_demo_keep_shape(const uint8_t *shape_ptr, uintptr_t shape_len);
FfiBuf_u8 boltffi_function_demo_echo_message(const uint8_t *message_ptr, uintptr_t message_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni byte-array helpers>
static bool boltffi_jni_direct_buffer_address(JNIEnv *env, jobject buffer, jlong required_capacity, void **address) {
    if (buffer == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer argument was null");
        return false;
    }
    if (required_capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer length was negative");
        return false;
    }
    jlong capacity = (*env)->GetDirectBufferCapacity(env, buffer);
    if (capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI argument was not a direct buffer");
        return false;
    }
    if (capacity < required_capacity) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer capacity was too small");
        return false;
    }
    *address = (*env)->GetDirectBufferAddress(env, buffer);
    if (*address == NULL && required_capacity != 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer address was unavailable");
        return false;
    }
    return true;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1echo_1bytes(JNIEnv *env, jclass cls, jobject bytes, jint __boltffi_bytes_len) {
    (void)cls;

    void *__boltffi_bytes_ptr = NULL;

    if (!boltffi_jni_direct_buffer_address(env, bytes, (jlong)__boltffi_bytes_len, &__boltffi_bytes_ptr)) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_function_demo_echo_bytes((const uint8_t *)__boltffi_bytes_ptr, (uintptr_t)__boltffi_bytes_len);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    return NULL;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1keep_1person(JNIEnv *env, jclass cls, jobject person, jint __boltffi_person_len) {
    (void)cls;

    void *__boltffi_person_ptr = NULL;

    if (!boltffi_jni_direct_buffer_address(env, person, (jlong)__boltffi_person_len, &__boltffi_person_ptr)) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_function_demo_keep_person((const uint8_t *)__boltffi_person_ptr, (uintptr_t)__boltffi_person_len);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    return NULL;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1keep_1shape(JNIEnv *env, jclass cls, jobject shape, jint __boltffi_shape_len) {
    (void)cls;

    void *__boltffi_shape_ptr = NULL;

    if (!boltffi_jni_direct_buffer_address(env, shape, (jlong)__boltffi_shape_len, &__boltffi_shape_ptr)) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_function_demo_keep_shape((const uint8_t *)__boltffi_shape_ptr, (uintptr_t)__boltffi_shape_len);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    return NULL;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1echo_1message(JNIEnv *env, jclass cls, jobject message, jint __boltffi_message_len) {
    (void)cls;

    void *__boltffi_message_ptr = NULL;

    if (!boltffi_jni_direct_buffer_address(env, message, (jlong)__boltffi_message_len, &__boltffi_message_ptr)) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_function_demo_echo_message((const uint8_t *)__boltffi_message_ptr, (uintptr_t)__boltffi_message_len);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    return NULL;
}
