boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_fallible_returns_as_encoded_error_checked_values.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/fallible_returns\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    int32_t x;
    int32_t y;
} ___Point;
typedef int32_t ___MathError;
#define MATH_ERROR_INVALID_INPUT ((___MathError)0)
FfiBuf_u8 boltffi_function_demo_checked_add(int32_t left, int32_t right, int32_t *return_out);
FfiBuf_u8 boltffi_function_demo_parse_point(const uint8_t *text_ptr, uintptr_t text_len, ___Point *return_out);
FfiBuf_u8 boltffi_function_demo_validate_name(const uint8_t *name_ptr, uintptr_t name_len, FfiBuf_u8 *return_out);
FfiBuf_u8 boltffi_function_demo_store_name(const uint8_t *name_ptr, uintptr_t name_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni error-buffer helper>
<jni byte-array helpers>
<jni record helpers>
static bool boltffi_jni_direct_buffer_address(JNIEnv *env, jobject buffer, jlong required_capacity, void **address) {
    if (buffer == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer argument was null");
        return false;
    }
    if (required_capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer length was negative");
        return false;
    }
    jlong capacity = (*env)->GetDirectBufferCapacity(env, buffer);
    if (capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI argument was not a direct buffer");
        return false;
    }
    if (capacity < required_capacity) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer capacity was too small");
        return false;
    }
    *address = (*env)->GetDirectBufferAddress(env, buffer);
    if (*address == NULL && required_capacity != 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer address was unavailable");
        return false;
    }
    return true;
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1checked_1add(JNIEnv *env, jclass cls, jint left, jint right) {
    (void)cls;

    int32_t __boltffi_return = (int32_t){0};

    FfiBuf_u8 error = boltffi_function_demo_checked_add(left, right, &__boltffi_return);

    if (error.ptr != NULL || error.len != 0) {
        boltffi_jni_throw_error_buffer(env, error);
        return 0;
    }

    return (jint)__boltffi_return;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1parse_1point(JNIEnv *env, jclass cls, jobject text, jint __boltffi_text_len) {
    (void)cls;

    void *__boltffi_text_ptr = NULL;
    ___Point __boltffi_return = (___Point){0};

    if (!boltffi_jni_direct_buffer_address(env, text, (jlong)__boltffi_text_len, &__boltffi_text_ptr)) {
        goto __boltffi_error;
    }

    FfiBuf_u8 error = boltffi_function_demo_parse_point((const uint8_t *)__boltffi_text_ptr, (uintptr_t)__boltffi_text_len, &__boltffi_return);

    if (error.ptr != NULL || error.len != 0) {
        boltffi_jni_throw_error_buffer(env, error);
        return NULL;
    }

    return boltffi_jni_record_to_byte_array(env, &__boltffi_return, (uintptr_t)sizeof(__boltffi_return));
__boltffi_error:
    return NULL;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1validate_1name(JNIEnv *env, jclass cls, jobject name, jint __boltffi_name_len) {
    (void)cls;

    void *__boltffi_name_ptr = NULL;
    FfiBuf_u8 __boltffi_return = (FfiBuf_u8){0};

    if (!boltffi_jni_direct_buffer_address(env, name, (jlong)__boltffi_name_len, &__boltffi_name_ptr)) {
        goto __boltffi_error;
    }

    FfiBuf_u8 error = boltffi_function_demo_validate_name((const uint8_t *)__boltffi_name_ptr, (uintptr_t)__boltffi_name_len, &__boltffi_return);

    if (error.ptr != NULL || error.len != 0) {
        boltffi_jni_throw_error_buffer(env, error);
        return NULL;
    }

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_return);
__boltffi_error:
    return NULL;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1store_1name(JNIEnv *env, jclass cls, jobject name, jint __boltffi_name_len) {
    (void)cls;

    void *__boltffi_name_ptr = NULL;

    if (!boltffi_jni_direct_buffer_address(env, name, (jlong)__boltffi_name_len, &__boltffi_name_ptr)) {
        goto __boltffi_error;
    }

    FfiBuf_u8 error = boltffi_function_demo_store_name((const uint8_t *)__boltffi_name_ptr, (uintptr_t)__boltffi_name_len);

    if (error.ptr != NULL || error.len != 0) {
        boltffi_jni_throw_error_buffer(env, error);
        return;
    }

    return;
__boltffi_error:
    return;
}
